--- a/packages/private/src/App.css
+++ b/packages/private/src/App.css
@@ -1,4 +1,31 @@
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css);
+
+* {
+  font-family: 'Spoqa Han Sans', sans-serif;
+  margin: 0;
+}
+
+h1,
+h2 {
+  font-weight: bold;
+}
+
+h3,
+h4 {
+  font-weight: 500;
+}
+
+h5,
+h6 {
+  font-weight: 300;
+}
+
+p {
+  font-weight: 100;
+}
+
 body {
-  background-color: #444;
+  background-color: #1c1c1c;
+  color: white;
   min-height: 100vh;
 }
